# Kilo

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
cmake/: Cache.cmake  EnforceOutOfSourceBuilds.cmake  StandardProjectSettings.cmake
includes/: AppendBuffer.hpp  Editor.hpp  EditorConfig.hpp  Offset.hpp  Terminal.hpp  TerminalSettings.hpp  TerminalState.hpp  Utilities.hpp  Window.hpp  WriteBuffer.hpp
src/: CMakeLists.txt  Editor.cpp  EditorConfig.cpp  Main.cpp  Terminal.cpp  TerminalSettings.cpp  TerminalState.cpp  Utilities.cpp  main.cpp
src/Application/: Application.cpp  Application.hpp
src/Constants/: Constants.hpp
src/Cursor/: Cursor.hpp
src/Editor/: Cursor.hpp  Editor.cpp  Editor.hpp  Offset.cpp  Offset.hpp
src/Editor/Cursor/: Cursor.hpp
src/Editor/Offset/: Offset.hpp
src/Editor/ScreenBuffer/: ScreenBuffer.cpp  ScreenBuffer.hpp
src/Editor/config/: config.cpp  config.hpp
src/Editor/constants/: constants.hpp
src/Editor/screen_buffer/: screen_buffer.cpp  screen_buffer.hpp
src/EditorConfig/: EditorConfig.cpp  EditorConfig.hpp
src/File/: File.cpp  File.hpp
src/IO/: IO.cpp  IO.hpp
src/Offset/: Offset.hpp
src/ScreenBuffer/: ScreenBuffer.cpp  ScreenBuffer.hpp
src/Terminal/: File.cpp  File.hpp  FileInterface.hpp  System.hpp  Terminal.cpp  Terminal.hpp  WindowSize.hpp
src/Terminal/TerminalMode/: TerminalMode.cpp  TerminalMode.hpp
src/Terminal/Termios/: Termios.hpp
src/Terminal/Window/: Window.cpp  Window.hpp  WindowSize.hpp  window.cpp
src/Terminal/mode/: terminal_mode.cpp  terminal_mode.hpp
src/Terminal/window/: window.cpp  window.hpp
src/TerminalMode/: TerminalMode.cpp  TerminalMode.hpp
src/TerminalState/: TerminalState.cpp
src/Termios/: Termios.cpp
src/Text/: Text.hpp
src/Utilities/: Utilities.cpp  Utilities.hpp
src/Window/: Window.cpp  Window.hpp
src/WriteBuffer/: ScreenBuffer.cpp  ScreenBuffer.hpp  WriteBuffer.cpp
tests/: AppendBuffer.test.cpp  CMakeLists.txt  Cursor.test.cpp  Editor.test.cpp  Offset.test.cpp  ScreenBuffer.test.cpp  Terminal.test.cpp  TerminalMode.test.cpp  TerminalState.test.cpp  Window.test.cpp  WriteBuffer.test.cpp  main.cpp
tests/Editor/: Editor.test.cpp
tests/ScreenBuffer/: ScreenBuffer.test.cpp
tests/TerminalMode/: TerminalMode.test.cpp
tests/Termios/: Termios.test.cpp
tests/Window/: Window.test.cpp
